kubernetes/services/keycloak/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
